# HuntingSnake

./: .gitignore  CMakeLists.txt  HuntingSnake.sln  main.cpp
Design/: effects.cpp  effects.hpp  interface.cpp  interface.hpp  notecuamthu.md  screenState.cpp  screenState.hpp  textureManager.cpp  textureManager.hpp
HuntingSnake/: HuntingSnake.cpp  HuntingSnake.vcxproj  HuntingSnake.vcxproj.filters  control.cpp  control.h  feature.cpp  feature.h  gameLogic.cpp  gameLogic.h  globals.h  save_load.cpp  save_load.h  state.cpp  thuvien.h
